pre-materials/setup/install_platform/deployment/monitoring/grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
      securityContext:
        runAsUser: 472
        fsGroup: 472
      containers:
      - name: grafana
        image: grafana/grafana:8.4.3
        ports:
        - name: grafana
          containerPort: 3000
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests: 
            memory: 500M
            cpu: "500m"
        volumeMounts:
          - mountPath: /var/lib/grafana
            name: grafana-storage
            readOnly: false

          - mountPath: /etc/grafana/provisioning/datasources
            name: grafana-datasources
            readOnly: false

          - mountPath: /etc/grafana/provisioning/dashboards/
            name: grafana-dashboards
            readOnly: false

          # - mountPath: /opt/grafana/dashboards
          #   name: grafana-dashboards-json

      restartPolicy: Always
      serviceAccountName: ""

      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-pvc

        - name: grafana-datasources
          configMap:
              defaultMode: 420
              name: datasources-conf

        - name: grafana-dashboards
          configMap:
            defaultMode: 420
            name: dashboards-conf

        # - name: grafana-dashboards-json
        #   configMap:
        #     defaultMode: 420
        #     name: dashboards-json-conf
